# estudos_alura

./: README.md
Imigração/: pyproject.toml
Imigração/imigração/: visializacao_seaborn.ipynb  visualizacao_matplot.ipynb  visualizacao_plotly.ipynb
Imobiliária/: README.md  pyproject.toml
Imobiliária/imobiliária/: novo_projeto_imobiliaria.py  projeto_imobiliaria.py
Pandas básico/: README.md  pyproject.toml
Pandas básico/Aula 1/: leitura_de_arquivos.py
Pandas básico/Aula 2/: agrupamento_de_dados.py
Pandas básico/Aula 3/: extra_locacao_imoveis.py  extra_vendas.py  manipulacao_de_dados.py
Pandas básico/Aula 4/: tratamento_de_dados.py
