[tool.poetry]
name = "imobiliária"
version = "0.1.0"
description = ""
authors = ["Artur Silva <artur.santana96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
