[tool.poetry]
name = "pandas básico"
version = "0.1.0"
description = ""
authors = ["Artur Silva <artur.santana96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
openpyxl = "^3.1.5"
requests = "^2.32.3"
lxml = "^5.3.0"
sqlalchemy = "^2.0.34"
xlrd = "^2.0.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
feature-engine = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
